--- a/04-praticando-exercicios/exercicios-basicos/index.html
+++ b/04-praticando-exercicios/exercicios-basicos/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/style.css">
-    <title>Praticando React</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
